# Azure-Deployed-Interactive-Brokers-HFT

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
apps/api/: __init__.py  main.py
apps/api/routers/: __init__.py  control.py  health.py
apps/ib_gw/: Dockerfile  README.md  entrypoint.sh
apps/ib_gw/ibc/: config.ini  start.sh
apps/md_collector/: __init__.py  cache.py  main.py  metrics.py  writer_timescale.py
apps/risk_oms/: __init__.py  main.py  metrics.py  oms.py  pretrade.py
apps/strategy/: __init__.py  features.py  main.py  metrics.py  orders.py  portfolio.py  signals.py  throttle.py
infra/k8s/: api-deployment.yaml  ib-gateway-deployment.yaml  md-collector-deployment.yaml  namespace.yaml  risk-oms-deployment.yaml  secret-provider-class.yaml  secrets-store-csi-driver.yaml  strategy-deployment.yaml
infra/terraform/: acr.tf  aks.tf  eventhubs.tf  keyvault.tf  main.tf  monitor.tf  outputs.tf  postgres.tf  providers.tf  redis.tf  variables.tf
libs/common/: __init__.py  config.py  ids.py  log.py  time.py
libs/ib_wrapper/: __init__.py  client.py  errors.py  reconnect.py
libs/storage/: __init__.py  kafka.py  models.py  pg.py  redis.py
notebooks/: visualization.ipynb
ops/monitoring/: prometheus-values.yaml
ops/runbooks/: deployment.md  incident-response.md
tests/integration/: mock_ib_gateway.py  test_paper_end_to_end.py
tests/unit/: test_ib_wrapper.py  test_pretrade.py  test_signals.py  test_throttle.py
