[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hft-ib-azure"
version = "0.1.0"
description = "High Frequency Trading System on Azure with IBKR Integration"
authors = [{name = "Trading Team", email = "trading@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "ib-insync>=0.9.86",
    "uvloop>=0.17.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "prometheus-client>=0.17.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "aiokafka>=0.8.0",
    "asyncpg>=0.28.0",
    "redis>=4.6.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "psycopg[binary]>=3.1.0",
    "python-json-logger>=2.0.0",
    "opentelemetry-sdk>=1.17.0",
    "opentelemetry-exporter-otlp>=1.17.0",
    "opentelemetry-instrumentation-fastapi>=0.38b0",
    "opentelemetry-instrumentation-asyncio>=0.38b0",
    "opentelemetry-instrumentation-redis>=0.38b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.38b0",
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.82.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/example/hft-ib-azure"
Repository = "https://github.com/example/hft-ib-azure.git"
Issues = "https://github.com/example/hft-ib-azure/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=apps",
    "--cov=libs",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "paper: Paper trading tests",
    "live: Live trading tests (requires manual confirmation)",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ib_insync.*",
    "aiokafka.*",
    "asyncpg.*",
    "redis.*",
    "sqlalchemy.*",
    "alembic.*",
    "prometheus_client.*",
    "opentelemetry.*",
]
ignore_missing_imports = true
